objects/Grade_Normalization__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Value__c</fullName>
        <label>GP Value</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>What is the final value for this grade?</inlineHelpText>
        <label>Grade Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Max_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Max Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grade Scale Types</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Grade Normalizations</relationshipLabel>
        <relationshipName>Grade_Normalizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Grade Normalizations</relationshipLabel>
        <relationshipName>Final_Grade_Normalizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transformed_Grade__c</fullName>
        <label>Transformed Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFinal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinal</label>
        <type>Checkbox</type>
    </fields>
    <label>Grade Normalization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GP_Value__c</columns>
        <columns>Picklist_Value__c</columns>
        <columns>Grade_Value__c</columns>
        <columns>isFinal__c</columns>
        <columns>Is_Max_Value__c</columns>
        <columns>Setup__c</columns>
        <columns>Transformed_Grade__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Grade Normalization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grade Normalizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>