objects/Grade_Normalization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GP_Value__c</columns>
    <columns>Picklist_Value__c</columns>
    <columns>Grade_Value__c</columns>
    <columns>isFinal__c</columns>
    <columns>Is_Max_Value__c</columns>
    <columns>Setup__c</columns>
    <columns>Transformed_Grade__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>